--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,8 @@
     <style name="SubTituloMenu">
         <item name="textAllCaps">true</item>
         <item name="android:textColor">@color/canal_subtitle_text</item>
+        <item name="android:textSize">35dp</item>
+
     </style>
 
 </resources>
