--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/canal_background"
+    android:background="@color/base"
     tools:context=".MenuActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_marginVertical="44dp"
         android:text="@string/tituloMenu"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/card_color"
         android:textSize="35sp"
         android:textStyle="bold"
         />
@@ -25,6 +25,8 @@
         android:layout_marginHorizontal="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/card_color"
+        android:textStyle="bold"
         android:text="@string/talleres" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -38,6 +40,8 @@
         android:layout_marginHorizontal="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/card_color"
+        android:textStyle="bold"
         android:text="@string/citas" />
 
     <androidx.recyclerview.widget.RecyclerView
