--- a/app/src/main/res/layout/item_cita.xml
+++ b/app/src/main/res/layout/item_cita.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="@color/canal_background_card"
+    app:cardBackgroundColor="@color/card_Elementos"
     android:layout_marginVertical="4dp">
 
     <LinearLayout
