--- a/app/src/main/res/layout/item_taller.xml
+++ b/app/src/main/res/layout/item_taller.xml
@@ -7,7 +7,7 @@
     android:layout_height="90dp"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="16dp"
-    app:cardBackgroundColor="@color/canal_background_card"
+    app:cardBackgroundColor="@color/card_Elementos"
     app:cardCornerRadius="16dp">
 
     <LinearLayout
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_margin="8dp"
+        android:background="@color/card_Elementos"
         android:orientation="vertical">
 
         <TextView
