Subida para limpiar

--- a/app/src/main/res/layout/activity_descuento.xml
+++ b/app/src/main/res/layout/activity_descuento.xml
@@ -4,96 +4,236 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="32dp"
     android:background="@color/base"
+    android:foregroundTint="@color/ic_psico_launcher_background"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="20dp"
     tools:context="es.repositoriocompartido.psicologiaapp.DescuentoActivity">
 
-    <TextView
-        android:id="@+id/txtResultado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/resultado"
-        android:textAllCaps="true"
-        android:textColor="@color/card_color"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/Hombre"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/txtResultado"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/cv_result"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/card_color_no_selected"
         app:cardCornerRadius="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="@color/card_color_no_selected">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.234"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"
+
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/lineal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="140dp"
+            android:backgroundTint="@color/card_color_no_selected"
             android:gravity="center"
-            android:orientation="vertical">
+            >
 
-<!--            <TextView-->
-<!--                android:id="@+id/txtResultadoSexo"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="22sp"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="sexo" />-->
 
-<!--            <TextView-->
-<!--                android:id="@+id/txtResultadoEdad"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="22sp"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="edad" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/txtResultadoEdad"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:textAllCaps="true"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textSize="22sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                tools:text="edad" />-->
 
-<!--            <TextView-->
-<!--                android:id="@+id/txtResultadoHijos"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="22sp"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="hijos" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/txtResultadoHijos"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:textAllCaps="true"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textSize="22sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                tools:text="hijos" />-->
 
-<!--            <TextView-->
-<!--                android:id="@+id/txtResultadoSueldo"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="22sp"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="sueldo" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/txtResultadoSueldo"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:textAllCaps="true"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textSize="22sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                tools:text="sueldo" />-->
 
             <TextView
                 android:id="@+id/txtResultadoDescuento"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/resultadoDescuento"
+                android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="36sp"
-                android:textStyle="bold"
-                android:text="@string/resultadoDescuento" />
-        </LinearLayout>
+                android:textSize="28sp"
+                android:textStyle="bold" />
 
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="100dp"
+        android:contentDescription="@string/imagen_cabeza_fondo_verde"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_result"
+        app:srcCompat="@mipmap/ic_psico_launcher"
+        tools:ignore="ImageContrastCheck"
+        tools:layout_editor_absoluteY="235dp" />
+
+    <TextView
+        android:id="@+id/txtMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="100dp"
+        android:fontFamily="sans-serif-medium"
+        android:paddingVertical="10dp"
+        android:text="@string/titulo"
+        android:textAlignment="center"
+        android:textColor="@color/card_Elementos"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_result"
+        app:layout_constraintBottom_toTopOf="@id/att"
+        tools:layout_editor_absoluteY="267dp" />
+
+    <TextView
+        android:id="@+id/att"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/para_atenderle_correctamente_complete_los_siguientes_datos"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        tools:ignore="TextSizeCheck" />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="@string/introduzca_correo_electronico"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/att" />
+
+    <EditText
+        android:id="@+id/edtEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:autofillHints=""
+        android:background="@drawable/stylo_border"
+        android:hint="@string/introduzca_su_correo_electronico"
+        android:minHeight="48dp"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textColor="@color/card_Elementos"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
+        tools:ignore="TextFields,VisualLintTextFieldSize" />
+
+    <TextView
+        android:id="@+id/txtMov"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:text="@string/introduzca_su_n_mero_de_tel_fono"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
+
+    <EditText
+        android:id="@+id/edtMvo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:autofillHints=""
+        android:background="@drawable/stylo_border"
+        android:hint="@string/introduzca_numero_telefono"
+        android:minHeight="48dp"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textColor="@color/card_Elementos"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtMov"
+        tools:ignore="TextFields,DuplicateSpeakableTextCheck" />
+
+
+
+
+    <CheckBox
+        android:id="@+id/cont"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/aumentar"
+        android:checked="true"
+        android:focusable="true"
+        android:drawableTint="@color/ic_psico_launcher_background"
+        android:foregroundTint="@color/ic_psico_launcher_background"
+        android:shadowColor="@color/ic_psico_launcher_background"
+        android:text="¿Desea que le contactemos?"
+        android:textColor="@color/card_Elementos"
+        app:buttonTint="@color/card_color_no_selected"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtMvo"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnEnv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/card_color_no_selected"
+        android:text="@string/enviar"
+        android:textColor="@color/base"
+        app:iconTint="@color/card_Elementos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cont"
+        tools:ignore="TextContrastCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
