--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="canal_cooking_category">#00BCD4</color>
     <color name="canal_other_category">#4CAF50</color>
 
-    <!--IMC MEJORADA COLORS-->
+    <!--App Psico COLORS-->
     <color name="base">#ECE3CE</color>
     <color name="card_color_no_selected">#739072</color>
     <color name="card_color">#4F6F52</color>
