--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,18 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!--CanalesApp-->
-    <color name="canal_background_card">#FF081A4A</color>
-    <color name="canal_background_disabled">#787878</color>
-    <color name="canal_background">#FF2D4993</color>
-    <color name="canal_subtitle_text">#959595</color>
-    <color name="canal_accent">#E91E63</color>
-
-    <color name="canal_technology_category">#FF9800</color>
-    <color name="canal_cooking_category">#00BCD4</color>
-    <color name="canal_other_category">#4CAF50</color>
-
-    <!--App Psico COLORS-->
+    <!--Colores base -->
     <color name="base">#ECE3CE</color>
     <color name="card_color_no_selected">#739072</color>
     <color name="card_color">#4F6F52</color>
@@ -22,6 +11,9 @@
     <color name="subtitulos">#FFFFFFFF</color>
     <color name="disminuir">#F1948A</color>
     <color name="aumentar">#F9E79F</color>
-
+    <color name="subtitulo_text">#959595</color>
+    <color name="categoria_pareja">#FF9800</color>
+    <color name="categoria_autoestima">#00BCD4</color>
+    <color name="categoria_crianza">#4CAF50</color>
 
 </resources>
